# christian-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_rag_flow.py
backend/chroma_data/: chroma.sqlite3
backend/config/: logging_config.py  settings.py
backend/custom_agents/: christianity_agent.py  guardrail_agent.py  image_agent.py
backend/eval/: dataset.json  runner.py
backend/llm/: gemini_provider.py  langchain_client.py  ollama_provider.py  openai_provider.py  router.py
backend/memory/: conversation_store.py
backend/moderation/: safety_layer.py
backend/prompts/: __init__.py  guardrail_prompt.xml  image_prompt_builder.py  system_prompt.xml
backend/rag/: chunker.py  embedder.py  hybrid_search.py  ingestor.py  md_converter.py  pipeline.py  sparse_encoder.py  stats.py
backend/routes/: chat.py  image.py  ingest.py  rag_admin.py
backend/scripts/: activate.ps1  run_server.ps1
backend/tests/: test_agent_e2e.py  test_rag_pipeline.py
backend/tools/: image_gen_tool.py  rag_tool.py  scripture_verify_tool.py
backend/uploads/: Biblenotes.converted.md
backend/vectordb/: __init__.py  chroma_client.py  qdrant_client.py
docs/: ARCHITECTURE.md  EVAL_RESULTS.md  QUICKSTART.md
