[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "christianity-ai-backend"
version = "1.0.0"
description = "Christianity-focused AI Assistant — FastAPI Backend"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
